# TeamB_FinalPJ

./: .firebaserc  .gitignore  APISpecification.md  README.md  package-lock.json  package.json  playwright.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.local.yml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  seed_db.py  wait-for-db.sh
backend/.devcontainer/: devcontainer.json
backend/alembic/: env.py
backend/app/: children.py  crud.py  database.py  emotion_api.py  emotion_color_api.py  main.py  models.py  s3_service.py  schemas.py  seed_data.py  stripe_api.py  voice_api.py
backend/app/api/v1/endpoints/: auth.py  children.py  emotion_api.py  stripe_api.py  (+2 more)
backend/app/config/: database.py  prompt_base.txt
backend/app/schemas/: voice.py
backend/app/services/: audio_optimizer.py  s3.py  whisper.py
backend/app/services/voice/: file_ops.py  transcription.py  validation.py
backend/app/utils/: audio.py  child_vocabulary.py  constants.py  error_handlers.py  prompt_loader.py  quality.py
backend/migrations/: env.py
backend/migrations/versions/: 1e42c6fd1d02_users_subscriptions_add_server_default_.py  530faaa64ab6_initial_database_schema.py  653a2e9135e5_make_trial_fields_nullable_in_.py  781571ca11e2_初期化.py  c480fa96b048_初期化.py  d4133314bd35_make_audio_file_path_nullable.py  dcaf9fab4553_fix_モデルにnullable_trueを明示的に追加.py  fdc7e3718216_initial_migration.py  manual_stripe_sub_id.py
backend/tests/: conftest.py  test_emotion_api.py  test_emotion_color_api.py  test_example.py  test_whisper_optimization.py
(+155 files in other folders)
